--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ form{
     margin: auto;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
+    margin-bottom: 1rem;
 }
 #email{
     border: 1px solid hsl(0, 0%, 80%);
@@ -80,6 +81,8 @@ form{
     background-color: transparent;
     padding: 1.2rem;
     color: hsl(0, 36%, 70%);
+    border-color:hsl(0, 80%, 86%);
+    outline: 0;
 }
 
 input::placeholder {
@@ -97,4 +100,25 @@ input::placeholder {
     /* box-shadow: 2px 2px 10px; */
     border-radius: 5rem;
     background-image: linear-gradient(hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+}
+
+#error{
+    color: hsl(0, 84%, 63%);
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: .8rem;
+    padding-left: 3rem;
+    display: none;
+}
+
+#error p{
+    display: inline;
+    margin-left: 1rem;
+    position: relative;
+    bottom: 0.5rem;
+}
+
+#error img{
+    position: relative;
+    right: -0.5rem;
+    top: -0.2rem;
 }
